chore: upload final jar